--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
-  "key1": "My name is Ines Riahi",
-  "key2": "I'm a Software Engineer",
+  "key1": "I'm Ines Riahi",
+  "key2": "A Software Engineer",
   "key3": "Based in Monastir, Tunisie.",
   "key4": "Download CV",
   "key5": "SKILLS",
