--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,6 @@
 {
   "key1": "Je suis Ines Riahi",
-  "key2": "Je suis un ingénieur logiciel",
+  "key2": "Ingénieure logiciel",
   "key3": "Basé à Monastir, Tunisie.",
   "key4": "Télécharger CV",
   "key5": "Compétences",
