--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,7 +6,7 @@
   "key5": "Compétences",
   "key6": "J'ai atteint avec succès les objectifs fixés par l'entreprise et ils sont satisfaits des résultats.",
   "key7": "Évaluations",
-  "key8": "Le client a exprimé leur satisfaction, renforçant ainsi l'efficacité de nos efforts.",
+  "key8": "Le client a exprimé sa satisfaction, renforçant ainsi l'efficacité de nos efforts.",
   "key9": "Heureuse de rapporter que mon entreprise est satisfaite des résultats obtenus grâce à mes efforts.",
   "key10": "Acceuil",
   "key11": "Projets",
