--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,7 +15,7 @@
   "key14": "Derniers Projets",
   "key15": "Site Web",
   "key16": "Site Web de Stradegy",
-  "key17": "Je suis impliqué dans la conception et la réalisation des modules pour un site web de finance bancaire.",
+  "key17": "Je suis impliquée dans la conception et la réalisation des modules pour un site web de finance bancaire.",
   "key18": "Site Web d'Asteelflash ",
   "key19": "Je conçois et développe l'intégralité d'un site web pour le suivi statistique de la production.",
   "key20": "Application Mobile",
